Wed Dec 25 17:47:47 2002  Bala  <bala@cs.wustl.edu>

        * TAO version 1.2.8 released.

Wed Dec 25 06:24:01 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* docs/performance.html: Added some tips about how to reduce the size of
	  the compile-time and run-time memory footprint.

Tue Dec 24 12:36:11 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/tests/Security/Crash_Test/server.cpp: Fixed a compile
	  error in g++ builds.
	 
Mon Dec 23 22:48:58 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/tests/Notify/Basic/AdminProperties.h:
	* orbsvcs/tests/Notify/Basic/AdminProperties.cpp: Fixed compile
	  errors in g++ builds that were caused by improper signatures. 

Mon Dec 23 22:33:56 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	A slight redesign of the changes applied to fix BUG 1276. The
        redesign was motivated due to a  drop in our performance. 
	
	* tao/Reply_Dispatcher.cpp:
	* tao/Reply_Dispatcher.h:
	* tao/Reply_Dispatcher.i: Did a slight redesign of how timeouts are
	  handled.  This was necessitated since the previous design made
	  things slow. Though none of the synchronization primitives were
	  used for normal cases ie. invocations without timeouts, we still
	  created them for every invocation. Creation of synchronizaton
	  primitives actually made things slow, and they have now been
	  removed. 
	
	* tao/Muxed_TMS.cpp: Removed calls to start_dispatch () and
	  end_dispatch () on the Reply_Dispatcher. 
	
	* tao/Invocation.cpp: We now do a synchronization on the internal
	  lock used by Muxed_TMS strategy so that no two threads are
	  active on the Reply_Handler at the same time. This, though not
	  very elegant, provides the same effect as the changes in "Sun
	  Dec 22 11:26:30 2002  Balachandran Natarajan
	  <bala@isis-server.isis.vanderbilt.edu>". The gist of the changes
	  mentioned above have still been retained. 
